incorporacion todos los estilos en un solo archivo

--- a/src/Configuracion.html
+++ b/src/Configuracion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/configuracion.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     
     <title>configuracion</title>
 </head>
@@ -20,67 +20,67 @@
             <li class="list__item list__item--click">
                 <div class="list__button list__button--click">
                     <img src="assets/docs.svg" class="list__img">
-                    <a href="#" class="nav__link">Fuente</a>
+                    <a class="nav__link">Fuente</a>
                     <img src="assets/arrow.svg" class="list__arrow">
                 </div>
                 <ul class="list__show">
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Tamaño</a>
+                        <a class="nav__link nav__link--inside">Tamaño</a>
                     </li>
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Color</a>
+                        <a class="nav__link nav__link--inside">Color</a>
                     </li>
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Estilo</a>
+                        <a class="nav__link nav__link--inside">Estilo</a>
                     </li>
                 </ul>
             </li>
             <li class="list__item list__item--click">
                 <div class="list__button list__button--click">
                     <img src="assets/stats.svg" class="list__img">
-                    <a href="#" class="nav__link">Idioma</a>
+                    <a class="nav__link">Idioma</a>
                     <img src="assets/arrow.svg" class="list__arrow">
                 </div>
                 <ul class="list__show">
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Lenguaje</a>
+                        <a class="nav__link nav__link--inside">Lenguaje</a>
                     </li>
                 </ul>
             </li>
             <li class="list__item list__item--click">
                 <div class="list__button list__button--click">
                     <img src="assets/dashboard.svg" class="list__img">
-                    <a href="#" class="nav__link">Pantalla</a>
+                    <a class="nav__link">Pantalla</a>
                     <img src="assets/arrow.svg" class="list__arrow">
                 </div>
                 <ul class="list__show">
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Brillo</a>
+                        <a class="nav__link nav__link--inside">Brillo</a>
                     </li>
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Temática</a>
+                        <a class="nav__link nav__link--inside">Temática</a>
                     </li>
                 </ul>
             </li>
             <li class="list__item list__item--click">
                 <div class="list__button list__button--click">
                     <img src="assets/bell.svg" class="list__img">
-                    <a href="#" class="nav__link">Notificaciones</a>
+                    <a class="nav__link">Notificaciones</a>
                     <img src="assets/arrow.svg" class="list__arrow">
                 </div>
                 <ul class="list__show">
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Sonido notificación</a>
+                        <a class="nav__link nav__link--inside">Sonido notificación</a>
                     </li>
                     <li class="list__inside">
-                        <a href="#" class="nav__link nav__link--inside">Activar notificación</a>
+                        <a class="nav__link nav__link--inside">Activar notificación</a>
                     </li>
                 </ul>
             </li>
             <li class="list__item">
                 <div class="list__button">
                     <img src="assets/message.svg" class="list__img">
-                    <a href="#" class="nav__link">Acerca de la app</a>
+                    <a class="nav__link">Acerca de la app</a>
                 </div>
             </li>
         </ul>
