--- a/src/aggcita.html
+++ b/src/aggcita.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/crstyle.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="app">
-        <div class="logomini">
-            <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
+        <div class="del">
+            <div class="logomini">
+                <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
+            </div>
+            <div class="titulo">
+                <h2>Agendar Cita</h2>
+            </div>
+            <input type="image" class="btn_cerrar1" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         </div>
-        <input type="image" class="btn_cerrar" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         
-
-        <div class="titulo">
-            <h2>Agendar Cita</h2>
-        </div>
 
         <div class="formulario">
             <h3>Tipo de cita</h3>
@@ -157,7 +158,7 @@
         </div>
 
         <div class="enviar">
-            <button class="btn_enviar" id="btn_enviar">Enviar</button>
+            <button class="btn_enviar1" id="btn_enviar">Enviar</button>
         </div>
 
 
