--- a/src/aggmed.html
+++ b/src/aggmed.html
@@ -5,21 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/crstyle.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="app">
-        <div class="logomini">
-            <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
+        <div class="del">
+            <div class="logomini">
+                <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
+            </div>
+            <div class="titulo">
+                <h3>Agregar Medicamento</h3>
+            </div>
+            <input type="image" class="btn_cerrar1" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         </div>
-        <input type="image" class="btn_cerrar" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
-        
-        <div class="titulo">
-            <h3>Agregar Medicamento</h3>
-        </div>
-
-        <div class="formulario">
-            <br><br>
+        <div class="formulario"><br>
             <h3>Nombre de medicamento</h3>
             <input type="text" id="tipoMedicamento" list="opciones-medicamento">
             <datalist id="opciones-medicamento">
@@ -54,12 +53,11 @@
                 <option value="Fenitoina">
                 <option value="Carbamazepina">
             </datalist>
-            <h3>Periodicidad</h3>
-            <p>Cantidad:</p>
+            <h2>Periodicidad</h2>
+            <h3>Cantidad:</h3>
             <input type="number" id="cantidad">
-            <h3>Cada cuanto?</h3>
-            <input type="number" id="periodicidad">
-            <br><br>
+            <h3>¿Cada cuanto?</h3>
+            <input type="number" id="periodicidad"><br>
                 <input type="radio" name="radio" id="dias"> Dias
                 <input type="radio" name="radio" id="horas"> Horas
             
@@ -69,7 +67,7 @@
         </div>
 
         <div class="enviar">
-            <button class="btn_enviar" id="btn_enviar">Enviar</button>
+            <button class="btn_enviar1  " id="btn_enviar">Enviar</button>
         </div>
 
 
