--- a/src/main.html
+++ b/src/main.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
-    <link rel="stylesheet" href="css/mainstyle.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="js/navegacion.js"></script>
 </head>
@@ -35,7 +34,7 @@
             <input type="button" class="btn_aggCita" id="btn_aggcita" onclick="inicializar(event)" value="Agregar Cita">
             <input type="button" class="btn_delCita" id="btn_delcita" onclick="inicializar(event)" value="Eliminar Cita">
         </div>
-
+        <br>
         <div class="titulo2">
             <h2>Tus medicamentos</h2>
         </div>
