--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     
     <title>Perfil</title>
 </head>
@@ -86,8 +86,7 @@
                     <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>Id</h3></div>
                     <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Patología</h3></div>
                     <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Descripcion</h3> </div>
-                </div>  
-                  
+                </div>     
             </div>
         </div>
     </div>
