--- a/src/aggmed.html
+++ b/src/aggmed.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="app">
@@ -65,12 +65,9 @@
             <input type="time" id="horamed">
             <input type="date" id="fecha">          
         </div>
-
         <div class="enviar">
             <button class="btn_enviar1  " id="btn_enviar">Enviar</button>
         </div>
-
-
     </div>
     <script src="js/tablasmed.js"></script>
     <script src="js/navegacion.js"></script>
