--- a/src/delcita.html
+++ b/src/delcita.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="app">
@@ -38,14 +38,10 @@
                     <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div><div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Cita</h3>  </div><div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
                 </div>   
             </div>
-
         </div>
-
         <div class="enviar">
             <button class="btn_enviar" id="btn_eliminar" onclick="eliminar()">Eliminar</button>
         </div>
-
-
     </div>
     <script src="js/actualizar_delcita.js"></script>
     <script src="js/navegacion.js"></script>
