--- a/src/main.html
+++ b/src/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="js/navegacion.js"></script>
 </head>
@@ -17,11 +17,9 @@
             <input type="image" class="btn_config" id="btn_Configuracion" onclick="inicializar(event)" src="assets/config.png" alt="" height="42px" width="42px">
             <input type="image" class="btn_perfil" id="btn_Perfil" onclick="inicializar(event)" src="assets/perfil.png" alt="" height="42px" width="42px">   
         </div>
-
         <div class="titulo1">
             <h2>Tus citas</h2>
         </div>
-
         <div id="div1">
             <div id="contenedorcitas" class="contenedor">
                 <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3> </div>
@@ -29,7 +27,6 @@
                 <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Hora</h3> </div>
             </div>              
        </div>
-
         <div class="btnCitas">
             <input type="button" class="btn_aggCita" id="btn_aggcita" onclick="inicializar(event)" value="Agregar Cita">
             <input type="button" class="btn_delCita" id="btn_delcita" onclick="inicializar(event)" value="Eliminar Cita">
@@ -38,7 +35,6 @@
         <div class="titulo2">
             <h2>Tus medicamentos</h2>
         </div>
-
         <div id="div2">
             <div id="contenedorMedicamentos" class="contenedor">
                 <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
@@ -46,13 +42,11 @@
                 <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Periodicidad</h3> </div>
             </div>        
        </div>
-
         <div class="btnMeds">
             <input type="button" class="btn_aggMed" id="btn_aggmed" onclick="inicializar(event)" value="Agregar medicamento" >
             <input type="button" class="btn_delMed" id="btn_delmed" onclick="inicializar(event)" value="Eliminar medicamento">
         </div>
     </div>
-    
     <script src="js/actualizar_main.js"></script>
     <script src="js/navegacion.js"></script>
 </body>
