--- a/src/main.html
+++ b/src/main.html
@@ -14,9 +14,11 @@
         <div class="header-main">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p class="p1">Principal</p>
-            <input type="image" class="btn_config" id="btn_Configuracion" onclick="inicializar(event)" src="assets/config.png" alt="" height="42px" width="42px">
-            <input type="image" class="btn_perfil" id="btn_Perfil" onclick="inicializar(event)" src="assets/perfil.png" alt="" height="42px" width="42px">   
-        </div>
+            <div class="main-buttons">
+                <input type="image" class="btn_config" id="btn_Configuracion" onclick="inicializar(event)" src="assets/config.png" alt="" height="42px" width="42px">
+                <input type="image" class="btn_perfil" id="btn_Perfil" onclick="inicializar(event)" src="assets/perfil.png" alt="" height="42px" width="42px">     
+            </div>
+       </div><br><br>
         <div class="titulo1">
             <h2>Tus citas</h2>
         </div>
@@ -31,21 +33,22 @@
             <input type="button" class="btn_aggCita" id="btn_aggcita" onclick="inicializar(event)" value="Agregar Cita">
             <input type="button" class="btn_delCita" id="btn_delcita" onclick="inicializar(event)" value="Eliminar Cita">
         </div>
-        <br>
+        <br><br>
         <div class="titulo2">
             <h2>Tus medicamentos</h2>
         </div>
         <div id="div2">
             <div id="contenedorMedicamentos" class="contenedor">
                 <div class="in1" style="grid-area: 1 / 1 / 2 / 2;"> <h3>ID</h3></div>
-                <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Medicamento</h3></div>
-                <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Periodicidad</h3> </div>
+                <div class="in2" style="grid-area: 1 / 2 / 2 / 3;"><h3>Fármaco</h3></div>
+                <div class="in3" style="grid-area: 1 / 3 / 2 / 4;"><h3>Frecuencia</h3> </div>
             </div>        
        </div>
         <div class="btnMeds">
-            <input type="button" class="btn_aggMed" id="btn_aggmed" onclick="inicializar(event)" value="Agregar medicamento" >
-            <input type="button" class="btn_delMed" id="btn_delmed" onclick="inicializar(event)" value="Eliminar medicamento">
+            <input type="button" class="btn_aggMed" id="btn_aggmed" onclick="inicializar(event)" value="Agregar fármaco" >
+            <input type="button" class="btn_delMed" id="btn_delmed" onclick="inicializar(event)" value="Eliminar fármaco">
         </div>
+        <br><br><br>
     </div>
     <script src="js/actualizar_main.js"></script>
     <script src="js/navegacion.js"></script>
