--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -9,7 +9,7 @@
     <title>Perfil</title>
 </head>
 <body>
-    <div class="perfil">
+    <div class="app">
         <div class="header-perfil">
             <img class="logo" src="https://cdn.discordapp.com/attachments/845745384953610240/1074132969322729522/1b8bdcf6004ed831ea6441af83a38a3e-signo-de-simbolo-de-medicina.png" alt="">
             <p class="p1">Perfil</p>
@@ -79,7 +79,10 @@
                     <textarea class="caja-descripcion" name="" id="txtarea" cols="30" rows="10"></textarea>
                 </div>
             </div>
-            <button class="btn_añadirP" id="btn_añadir" onclick="enviarPat()">Añadir</button>
+            <div class="dbtn_anadirp">
+                <button class="btn_añadirP" id="btn_añadir" onclick="enviarPat()">Añadir</button>
+            </div>
+            
             <br><br>
             <div id="div1">
                 <div id="contenedorPato" class="contenedor">
