--- a/src/aggcita.html
+++ b/src/aggcita.html
@@ -19,138 +19,138 @@
             <input type="image" class="btn_cerrar1" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         </div>
         <div class="formulario">
-            <h3>Tipo de cita</h3>
-            <input type="text" id="tipoCita" list="opciones-consultas">
-            <datalist id="opciones-consultas">
-                <option value="Consulta de atención primaria">
-                    <option value="Consulta de especialistas"> 
-                    <option value="Consulta de urgencia"> 
-                    <option value="Consulta de seguimiento"> 
-                    <option value="Consulta de telemedicina"> 
-                    <option value="Consulta de bienestar"> 
-                    <option value="Consulta preoperatoria">
-                    <option value="Consulta postoperatoria">
-                    <option value="Consulta prenatal">
-                    <option value="Consulta ginecológica">
-                    <option value="Consulta de planificación familiar">
-                    <option value="Consulta de infertilidad"> 
-                    <option value="Consulta de psicología clínica">
-                    <option value="Consulta de psiquiatría"> 
-                    <option value="Consulta de nutrición"> 
-                    <option value="Consulta de fisioterapia"> 
-                    <option value="Consulta de rehabilitación"> 
-                    <option value="Consulta de terapia ocupacional">
-                    <option value="Consulta de ortopedia"> 
-                    <option value="Consulta de oftalmología"> 
-                    <option value="Consulta de otorrinolaringología"> 
-                    <option value="Consulta de neurología"> 
-                    <option value="Consulta de endocrinología"> 
-                    <option value="Consulta de cardiología"> 
-                    <option value="Consulta de neumología"> 
-                    <option value="Consulta de gastroenterología"> 
-                    <option value="Consulta de dermatología"> 
-                    <option value="Consulta de alergología"> 
-                    <option value="Consulta de medicina deportiva">  
-                    <option value="Consulta de medicina estética">  
-                    <option value="Consulta de pediatría"> 
-                    <option value="Consulta de geriatría"> 
-                    <option value="Consulta de odontología"> 
-                    <option value="Consulta de periodoncia"> 
-                    <option value="Consulta de endodoncia"> 
-                    <option value="Consulta de cirugía maxilofacial">  
-                    <option value="Consulta de ortodoncia"> 
-                    <option value="Consulta de odontopediatría"> 
-                    <option value="Consulta de implantología"> 
-                    <option value="Consulta de medicina interna">  
-                    <option value="Consulta de urología"> 
-                    <option value="Consulta de proctología"> 
-                    <option value="Consulta de oncología pediátrica">  
-                    <option value="Consulta de hematología"> 
-                    <option value="Consulta de genética médica">  
-                    <option value="Consulta de medicina del sueño">   
-                    <option value="Consulta de medicina de familia y comunitaria">   
-                    <option value="Consulta de medicina intensiva">  
-                    <option value="Consulta de enfermedades infecciosas">  
-                    <option value="Consulta de medicina del trabajo">  
-                    <option value="Consulta de medicina de urgencias">  
-                    <option value="Consulta de psicología infantil">  
-                    <option value="Consulta de terapia de pareja">   
-                    <option value="Consulta de terapia sexual">  
-                    <option value="Consulta de logopedia"> 
-                    <option value="Consulta de terapia ocupacional pediátrica">  
-                    <option value="Consulta de terapia respiratoria">  
-                    <option value="Consulta de terapia del lenguaje">   
-                    <option value="Consulta de terapia de la mano">   
-                    <option value="Consulta de terapia cognitivo -conductual">  
-                    <option value="Consulta de terapia familiar">  
-                    <option value="Consulta de terapia gestalt">  
-                    <option value="Consulta de acupuntura"> 
-                    <option value="Consulta de quiropráctica"> 
-                    <option value="Consulta de osteopatía"> 
-                    <option value="Consulta de homeopatía"> 
-                    <option value="Consulta de naturopatía"> 
-                    <option value="Consulta de quiromasaje"> 
-                    <option value="Consulta de podología"> 
-                    <option value="Consulta de fisioterapia respiratoria">  
-            </datalist>
+            <h3>Tipo de cita</h3><br>
+            <select id="opciones-consultas">
+                    <option selected></option>
+                    <option>Consulta de atención primaria</option>
+                    <option>Consulta de especialistas</option> 
+                    <option>Consulta de urgencia</option> 
+                    <option>Consulta de seguimiento</option> 
+                    <option>Consulta de telemedicina</option> 
+                    <option>Consulta de bienestar</option> 
+                    <option>Consulta preoperatoria</option>
+                    <option>Consulta postoperatoria</option>
+                    <option>Consulta prenatal</option>
+                    <option>Consulta ginecológica</option>
+                    <option>Consulta de planificación familiar</option>
+                    <option>Consulta de infertilidad</option> 
+                    <option>Consulta de psicología clínica</option>
+                    <option>Consulta de psiquiatría</option> 
+                    <option>Consulta de nutrición</option> 
+                    <option>Consulta de fisioterapia</option> 
+                    <option>Consulta de rehabilitación</option> 
+                    <option>Consulta de terapia ocupacional</option>
+                    <option>Consulta de ortopedia</option> 
+                    <option>Consulta de oftalmología</option> 
+                    <option>Consulta de otorrinolaringología</option> 
+                    <option>Consulta de neurología</option> 
+                    <option>Consulta de endocrinología</option> 
+                    <option>Consulta de cardiología</option> 
+                    <option>Consulta de neumología</option> 
+                    <option>Consulta de gastroenterología</option> 
+                    <option>Consulta de dermatología</option> 
+                    <option>Consulta de alergología</option> 
+                    <option>Consulta de medicina deportiva</option>  
+                    <option>Consulta de medicina estética</option>  
+                    <option>Consulta de pediatría</option> 
+                    <option>Consulta de geriatría</option> 
+                    <option>Consulta de odontología</option> 
+                    <option>Consulta de periodoncia</option> 
+                    <option>Consulta de endodoncia</option> 
+                    <option>Consulta de cirugía maxilofacial</option>  
+                    <option>Consulta de ortodoncia</option> 
+                    <option>Consulta de odontopediatría</option> 
+                    <option>Consulta de implantología</option> 
+                    <option>Consulta de medicina interna</option>  
+                    <option>Consulta de urología</option> 
+                    <option>Consulta de proctología</option> 
+                    <option>Consulta de oncología pediátrica</option>  
+                    <option>Consulta de hematología</option> 
+                    <option>Consulta de genética médica</option>  
+                    <option>Consulta de medicina del sueño</option>   
+                    <option>Consulta de medicina de familia y comunitaria</option>   
+                    <option>Consulta de medicina intensiva</option>  
+                    <option>Consulta de enfermedades infecciosas</option>  
+                    <option>Consulta de medicina del trabajo</option>  
+                    <option>Consulta de medicina de urgencias</option>  
+                    <option>Consulta de psicología infantil</option>  
+                    <option>Consulta de terapia de pareja</option>   
+                    <option>Consulta de terapia sexual</option>  
+                    <option>Consulta de logopedia</option> 
+                    <option>Consulta de terapia ocupacional pediátrica</option>  
+                    <option>Consulta de terapia respiratoria</option>  
+                    <option>Consulta de terapia del lenguaje</option>   
+                    <option>Consulta de terapia de la mano</option>   
+                    <option>Consulta de terapia cognitivo -conductual</option>  
+                    <option>Consulta de terapia familiar</option>  
+                    <option>Consulta de terapia gestalt</option>  
+                    <option>Consulta de acupuntura</option> 
+                    <option>Consulta de quiropráctica</option> 
+                    <option>Consulta de osteopatía</option> 
+                    <option>Consulta de homeopatía</option> 
+                    <option>Consulta de naturopatía</option> 
+                    <option>Consulta de quiromasaje</option> 
+                    <option>Consulta de podología</option> 
+                    <option>Consulta de fisioterapia respiratoria</option>  
+                    </select>
             <h3>Descripción de cita</h3>
             <input type="text" id="descripcion">
             <h3>Nombre del médico</h3>
             <input type="text" id="nomMedico">
-            <h3>Tipo de médico</h3> 
-            <input type="text" id="tipoMedico" list="opciones-medicos">
-            <datalist id="opciones-medicos">
-                <option value= "Médico de familia">
-                <option value= "Médico general">
-                <option value= "Médico de cabecera">
-                <option value= "Cardiólogo">
-                <option value= "Dermatólogo">
-                <option value= "Oftalmólogo">
-                <option value= "Oncólogo">
-                <option value= "Médico de urgencias">
-                <option value= "Médico de emergencias">
-                <option value= "Médico de guardia">
-                <option value= "Médico especialista que está tratando al paciente">
-                <option value= "Médico especialista que realiza consultas a distancia">
-                <option value= "Médico especialista en medicina preventiva">
-                <option value= "Médico cirujano">
-                <option value= "Anestesiólogo">
-                <option value= "Ginecólogo obstetra">
-                <option value= "Matrona">
-                <option value= "Especialista en planificación familiar">
-                <option value= "Especialista en medicina reproductiva">
-                <option value= "Psiquiatra">
-                <option value= "Nutricionista">
-                <option value= "Fisioterapeuta">
-                <option value= "Médico rehabilitador">
-                <option value= "Terapeuta ocupacional">
-                <option value= "Ortopedista">
-                <option value= "Neurólogo">
-                <option value= "Endocrinólogo">
-                <option value= "Cardiólogo">
-                <option value= "Neumólogo">
-                <option value= "Gastroenterólogo">
-                <option value= "Dermatólogo">
-                <option value= "Alergólogo">
-                <option value= "Médico deportólogo">
-                <option value= "Médico estético">
-                <option value= "Hematólogo">
-                <option value= "Infectólogo">
-                <option value= "Nefrólogo">
-                <option value= "Otorrinolaringólogo">
-                <option value= "Pediatra">
-                <option value= "Radiólogo">
-                <option value= "Médico forense">
-                <option value= "Médico de medicina del trabajo">
-                <option value= "Médico de atención domiciliaria">
-                <option value= "Médico de cuidados paliativos">
-            </datalist>
+            <h3>Tipo de médico</h3> <br>
+            <select id="opciones-medicos">
+                <option selected></option>
+                <option>Médico de familia</option>
+                <option>Médico general</option>
+                <option>Médico de cabecera</option>
+                <option>Cardiólogo</option>
+                <option>Dermatólogo</option>
+                <option>Oftalmólogo</option>
+                <option>Oncólogo</option>
+                <option>Médico de urgencias</option>
+                <option>Médico de emergencias</option>
+                <option>Médico de guardia</option>
+                <option>Médico especialista que está tratando al paciente</option>
+                <option>Médico especialista que realiza consultas a distancia</option>
+                <option>Médico especialista en medicina preventiva</option>
+                <option>Médico cirujano</option>
+                <option>Anestesiólogo</option>
+                <option>Ginecólogo obstetra</option>
+                <option>Matrona</option>
+                <option>Especialista en planificación familiar</option>
+                <option>Especialista en medicina reproductiva</option>
+                <option>Psiquiatra</option>
+                <option>Nutricionista</option>
+                <option>Fisioterapeuta</option>
+                <option>Médico rehabilitador</option>
+                <option>Terapeuta ocupacional</option>
+                <option>Ortopedista</option>
+                <option>Neurólogo</option>
+                <option>Endocrinólogo</option>
+                <option>Cardiólogo</option>
+                <option>Neumólogo</option>
+                <option>Gastroenterólogo</option>
+                <option>Dermatólogo</option>
+                <option>Alergólogo</option>
+                <option>Médico deportólogo</option>
+                <option>Médico estético</option>
+                <option>Hematólogo</option>
+                <option>Infectólogo</option>
+                <option>Nefrólogo</option>
+                <option>Otorrinolaringólogo</option>
+                <option>Pediatra</option>
+                <option>Radiólogo</option>
+                <option>Médico forense</option>
+                <option>Médico de medicina del trabajo</option>
+                <option>Médico de atención domiciliaria</option>
+                <option>Médico de cuidados paliativos</option>
+                </select>
             <h3>Hora  ---  Fecha</h3>
             <input type="time" id="hora">
             <input type="date" id="fecha">
             <h3>Lugar</h3>
             <input type="text" id="lugar">           
-            <div class="enviar">
+            <div class="enviar1">
                 <button class="btn_enviar1" id="btn_enviar">Enviar</button>
             </div>
         </div>
