--- a/src/aggmed.html
+++ b/src/aggmed.html
@@ -19,40 +19,40 @@
             <input type="image" class="btn_cerrar1" id="btn_main" onclick="inicializar(event)" src="https://media.discordapp.net/attachments/845745384953610240/1074125706096803961/image_1.png" alt="" height="42px" width="42px">
         </div>
         <div class="formulario"><br>
-            <h3>Nombre de medicamento</h3>
-            <input type="text" id="tipoMedicamento" list="opciones-medicamento">
-            <datalist id="opciones-medicamento">
-                <option value="Paracetamol">
-                <option value="Ibuprofeno">
-                <option value="Aspirina">
-                <option value="Dipirona">
-                <option value="Omeprazol">
-                <option value="Metformina">
-                <option value="Insulina">
-                <option value="Simvastatina">
-                <option value="Losartán">
-                <option value="Atorvastatina">
-                <option value="Hidroclorotiazida">
-                <option value="Enalapril">
-                <option value="Citalopram">
-                <option value="Sertralina">
-                <option value="Lorazepam">
-                <option value="Diazepam">
-                <option value="Clonazepam">
-                <option value="Metoclopramida">
-                <option value="Ranitidina">
-                <option value="Prednisona">
-                <option value="Codeína">
-                <option value="Tramadol">
-                <option value="Mefenámico">
-                <option value="Diclofenaco">
-                <option value="Paroxetina">
-                <option value="Furosemida">
-                <option value="Levotiroxina">
-                <option value="Warfarina">
-                <option value="Fenitoina">
-                <option value="Carbamazepina">
-            </datalist>
+            <h3>Nombre de medicamento</h3><br>
+            <select id="opciones-medicamento">
+                <option selected></option>
+                <option>Paracetamol</option>
+                <option>Ibuprofeno</option>
+                <option>Aspirina</option>
+                <option>Dipirona</option>
+                <option>Omeprazol</option>
+                <option>Metformina</option>
+                <option>Insulina</option>
+                <option>Simvastatina</option>
+                <option>Losartán</option>
+                <option>Atorvastatina</option>
+                <option>Hidroclorotiazida</option>
+                <option>Enalapril</option>
+                <option>Citalopram</option>
+                <option>Sertralina</option>
+                <option>Lorazepam</option>
+                <option>Diazepam</option>
+                <option>Clonazepam</option>
+                <option>Metoclopramida</option>
+                <option>Ranitidina</option>
+                <option>Prednisona</option>
+                <option>Codeína</option>
+                <option>Tramadol</option>
+                <option>Mefenámico</option>
+                <option>Diclofenaco</option>
+                <option>Paroxetina</option>
+                <option>Furosemida</option>
+                <option>Levotiroxina</option>
+                <option>Warfarina</option>
+                <option>Fenitoina</option>
+                <option>Carbamazepina</option>
+            </select>
             <h2>Periodicidad</h2>
             <h3>Cantidad:</h3>
             <input type="number" id="cantidad">
