organizacion de titulo

--- a/src/delmed.html
+++ b/src/delmed.html
@@ -23,7 +23,9 @@
             <div class="foto1">
                 <img src="https://i.pinimg.com/736x/65/3d/5c/653d5cf7171ab047937fa141b254c14a.jpg" alt="">
             </div><br>
-            <h2>Seleccione el medicamento que desea eliminar</h2>
+            <div class="titulo3">
+                <h2>Seleccione el medicamento que desea eliminar</h2>
+            </div><br><br>
             <div class="seccion4">
                 <div class="caja">
                     <select id="seccionesMed">
