Acerca de realizado

--- a/src/Configuracion.html
+++ b/src/Configuracion.html
@@ -80,7 +80,7 @@
             <li class="list__item">
                 <div class="list__button">
                     <img src="assets/message.svg" class="list__img">
-                    <a class="nav__link">Acerca de la app</a>
+                    <a href="acercaDe.html" class="nav__link">Acerca de la app</a>
                 </div>
             </li>
         </ul>
