--- a/src/delmed.html
+++ b/src/delmed.html
@@ -25,7 +25,7 @@
             </div><br>
             <div class="titulo3">
                 <h2>Seleccione el medicamento que desea eliminar</h2>
-            </div><br><br>
+            </div><br><br><br>
             <div class="seccion4">
                 <div class="caja">
                     <select id="seccionesMed">
